# WSI-tile-artefact-detector

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
artefact_detector/: artefact_detector.default_model  default_model.ckpt  deploy.py  helpers.py  model.py  test.py  train.py
