[metadata]
name = WSI-tile-artefact-detector
version = 1.1.4
author = James Brooks
author_email = jamesalexander.brooks@med.uni-duesseldorf.de
description = Small model designed to catch artefacts in WSI tiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brooksja/WSI-tile-artefact-detector.git
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: Fedora 36

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    imutils>=0.5.4
    opencv-python>=4.8.0.74
    scikit-learn>=1.3.0
    importlib-resources>=1.1.0
include_package_data = True
