[metadata]
name = WSI-tile-artefact-detector
version = 2.0.1
author = James Brooks
author_email = jamesalexander.brooks@med.uni-duesseldorf.de
description = Small model designed to catch artefacts in WSI tiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brooksja/WSI-tile-artefact-detector.git
classifiers =
    Programming Language :: Python :: 3
    License :: GNU General Public License v3.0
    Operating System :: Fedora 36

[options]
packages = find:
python_requires = >=3.8
install_requires = 
    importlib-resources>=1.1.0
    lightning>=2
    torch>=1.13
    torchvision>=0.14
include_package_data = True
